--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,4 @@
-google-api-python-client
-google-auth-oauthlib
-google-auth-httplib2
+google-api-python-client==1.7.2
+google-auth==2.14.1
+google-auth-httplib2==0.0.3
+google-auth-oauthlib==0.4.1
